# rucent

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: client.rs
src/: client.rs  client.test.rs  lib.rs  options.rs  options.test.rs  pipe.rs  protocol.rs
tests/: client.rs
