[package]
name = "rucent"
version = "0.1.1"
authors = ["hamza saidu (cyberguru1) <hamzasaidu34@gmail.com>"]
edition = "2021"
description = "Centrifugo HTTP API client"
repository = "https://github.com/Cyberguru1/rucent"
license = "MIT OR Apache-2.0"
keywords = ["centrifugo", "rucent", "http", "api", "client"]

[[example]]
name = "client"
path = "examples/client.rs"
required-features = ["examples"]


[dependencies]
serde = { version = "1.0.216", features = ["derive"] }
serde_json = { version = "1.0.133",  features = ["raw_value"] }
reqwest ={version =  "0.12.9", features = ["json"]}
tokio = { version = "1.42.0", features = ["macros", "rt", "sync","rt-multi-thread"] }
simple_logger = { version = "5.0.0", optional = true }
log = "0.4.22"
lazy_static = "1.4"


[features]
examples = ["dep:simple_logger"]
with_local_server = []